Fix locale height on mobile

--- a/src/login/main.css
+++ b/src/login/main.css
@@ -352,7 +352,6 @@ p button, .instruction button {
 
   /* Locale menu stays inside padding and doesn’t overlap */
   .kcLocaleMainClass {
-    top: var(--kc-space-3);
     right: var(--kc-space-3);
   }
 
